--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -31,6 +31,7 @@
     justify-content: space-evenly;
     align-items: center;
     background: #2c2c2e;
+    margin-top: 70px;
     border-radius: 15px;
     box-shadow: 10px 10px 20px #17b1e5,-10px -10px 20px #151516;
 
