--- a/src/Components/Styles/Nav.css
+++ b/src/Components/Styles/Nav.css
@@ -13,8 +13,9 @@ body {
 
 ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
+    gap: 60px;
     padding: 10px;
 }
 
@@ -26,10 +27,10 @@ button {
     padding: 3px 5px;
     background-color: rgba(26, 24, 24, 0.616);
     border-radius: px;
-    border-top: solid rgb(9, 80, 108)3px;
-    border-left: solid rgb(9, 80, 108)3px;
-    border-bottom: solid rgb(9, 80, 108)0.5px;
-    border-right: solid rgb(9, 80, 108)0.5px;
+    border-top: solid rgb(107, 205, 244)3px;
+    border-left: solid rgb(43, 140, 179)3px;
+    border-right: solid rgb(67, 68, 68)0.5px;
+    border-bottom: solid rgb(86, 88, 88)0.5px;
     font-size: 15px;
     transition: 100ms;
     z-index: 3;
