--- a/src/Components/Styles/Nav.css
+++ b/src/Components/Styles/Nav.css
@@ -13,7 +13,7 @@ body {
 
 ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
 }
